%changelog
* Fri Feb 25 2022 Roveda <roveda@universal-logging-system.org> 1.0-35
2022-02-25: Added encoding guessing in Uls2.pm.
2022-02-01: Added lfa4uls functionality to process the alert.log.

* Sun Jan 16 2022 Roveda <roveda@universal-logging-system.org> 1.0-34
2022-01-16: watch_oracle.pl: added documentation, optimized access to 
audit entries by using EVENT_TIMESTAMP_UTC.

* Thu Dec 09 2021 Roveda <roveda@universal-logging-system.org> 1.0-33
2021-12-09: Moved 'set feedback off' to beginnning of sql commands and 
changed print output in sub exec_sql() in all perl scripts.
Unsetting SQLPATH and ORACLE_PATH in all bash scripts after having sourced the environment file
to avoid executing the login.sql which may include unwanted settings.
2021-12-06: Implemented the changes from HJF into Misc.pm

* Sat Dec 04 2021 Roveda <roveda@universal-logging-system.org> 1.0-32
2021-12-04: New parameter ADDITIONAL_ENCODINGS in etc/uls/oracle/standard.conf.
Implemented this parameter in watch_oracle.pl to allow customizing of additional
encoding checks of alert.log lines (which depends on the database character set).

* Fri Dec 03 2021 Roveda <roveda@universal-logging-system.org> 1.0-31
2021-12-03: Trying to convert strangely encoded lines of the alert.log to 
Perl's internal encoding to preserve umlaute in watch_oracle.pl

* Thu Dec 02 2021 Roveda <roveda@universal-logging-system.org> 1.0-30
2021-12-02: Changed to LANG=en_US.UTF-8 in all bash scripts, determine the current 
directory by the use of 'readlink', added echoerr() as local function.

* Sat Nov 27 2021 Roveda <roveda@universal-logging-system.org> 1.0-29
2021-11-27: Changed default LANG setting from C to en_US.UTF-8 in all .sh scripts.
Added full UTF-8 support to all perl scripts Umlaute should now be processed correctly 
in output to files sent to ULS.
2021-11-16: Added detail 'database role - status' in watch_oracle.pl. The minus sign 