@@ -244,6 +244,10 @@ IDENTIFIER = _watch_oracle
 #
 # A comma separated list of options for extended or reduced monitoring.
 #
+# BLOCKING_SESSIONS_ALWAYS
+#   Send the number of blocking sessions to ULS, 
+#   even if it is zero.
+#
 # CURSORS
 #   -- cursors -- open cursors            | open_cursors | count | max | avg
 #              -- session cached cursors  | session_cached_cursors | sessions hit limit | avg
